force-app/main/default/objects/Booking__c/fields/Invoice_Payment_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Invoice Payment Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>