force-app/main/default/objects/Booking__c/fields/UnitId__c.field-meta.xml
<CustomField>
    <fullName>UnitId__c</fullName>
    <label>UnitId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>